syntax = "proto3";

package fdb_rl.tuple_schema.v1;

// Schema element for primary key.
enum PrimaryKeySchemaElement {
  // Unspecified
  PRIMARY_KEY_SCHEMA_ELEMENT_UNSPECIFIED = 0;
  // `TupleSchemaElement::String`
  PRIMARY_KEY_SCHEMA_ELEMENT_STRING = 1;
  // `TupleSchemaElement::Double`
  PRIMARY_KEY_SCHEMA_ELEMENT_DOUBLE = 2;
  // `TupleSchemaElement::Float`
  PRIMARY_KEY_SCHEMA_ELEMENT_FLOAT = 3;
  // `TupleSchemaElement::Integer`
  PRIMARY_KEY_SCHEMA_ELEMENT_INTEGER = 4;
  // `TupleSchemaElement::Boolean`
  PRIMARY_KEY_SCHEMA_ELEMENT_BOOLEAN = 5;
  // `TupleSchemaElement::Bytes`
  PRIMARY_KEY_SCHEMA_ELEMENT_BYTES = 6;
  // `TupleSchemaElement::Uuid`
  PRIMARY_KEY_SCHEMA_ELEMENT_UUID = 7;
}

// Primary key schema
message PrimaryKeySchema {
  // At-least there *must* be one element.
  repeated PrimaryKeySchemaElement fdb_key_schema = 1;
}

// Schema element for index key and value.
enum IndexSchemaElement {
  // Unspecified
  INDEX_SCHEMA_ELEMENT_UNSPECIFIED = 0;
  // `TupleSchemaElement::String`
  INDEX_SCHEMA_ELEMENT_STRING = 1;
  // `TupleSchemaElement::MaybeString`
  INDEX_SCHEMA_ELEMENT_MAYBE_STRING = 2;
  // ``TupleSchemaElement::Double``
  INDEX_SCHEMA_ELEMENT_DOUBLE = 3;
  // ``TupleSchemaElement::MaybeDouble``
  INDEX_SCHEMA_ELEMENT_MAYBE_DOUBLE = 4;
  // `TupleSchemaElement::Float`
  INDEX_SCHEMA_ELEMENT_FLOAT = 5;
  // `TupleSchemaElement::MaybeFloat`
  INDEX_SCHEMA_ELEMENT_MAYBE_FLOAT = 6;
  // `TupleSchemaElement::Integer`
  INDEX_SCHEMA_ELEMENT_INTEGER = 7;
  // `TupleSchemaElement::MaybeInteger`
  INDEX_SCHEMA_ELEMENT_MAYBE_INTEGER = 8;
  // `TupleSchemaElement::Boolean`
  INDEX_SCHEMA_ELEMENT_BOOLEAN = 9;
  // `TupleSchemaElement::MaybeBoolean`
  INDEX_SCHEMA_ELEMENT_MAYBE_BOOLEAN = 10;
  // `TupleSchemaElement::Bytes`
  INDEX_SCHEMA_ELEMENT_BYTES = 11;
  // `TupleSchemaElement::MaybeString`
  INDEX_SCHEMA_ELEMENT_MAYBE_BYTES = 12;
  // `TupleSchemaElement::Uuid`
  INDEX_SCHEMA_ELEMENT_UUID = 13;
  // `TupleSchemaElement::MaybeUuid`
  INDEX_SCHEMA_ELEMENT_MAYBE_UUID = 14;
  // `TupleSchemaElement::Versionstamp`
  INDEX_SCHEMA_ELEMENT_VERSIONSTAMP = 15;
  // `TupleSchemaElement::ListOfString`
  INDEX_SCHEMA_ELEMENT_LIST_OF_STRING = 16;
  // `TupleSchemaElement::ListOfDouble`
  INDEX_SCHEMA_ELEMENT_LIST_OF_DOUBLE = 17;
  // `TupleSchemaElement::ListOfFloat`
  INDEX_SCHEMA_ELEMENT_LIST_OF_FLOAT = 18;
  // `TupleSchemaElement::ListOfInteger`
  INDEX_SCHEMA_ELEMENT_LIST_OF_INTEGER = 19;
  // `TupleSchemaElement::ListOfBoolean`
  INDEX_SCHEMA_ELEMENT_LIST_OF_BOOLEAN = 20;
  // `TupleSchemaElement::ListOfBytes`
  INDEX_SCHEMA_ELEMENT_LIST_OF_BYTES = 21;
  // `TupleSchemaElement::ListOfUuid`
  INDEX_SCHEMA_ELEMENT_LIST_OF_UUID = 22;
}

// Schema for the value part of FDB key-value that represents an Index
// entry.
//
// We need to define this because we cannot have `optional repeated`
// in protobuf.
message IndexSchemaValue {
  repeated IndexSchemaElement value = 1;
}

// Index schema
message IndexSchema {
  // There must be at-least two elements.
  repeated IndexSchemaElement fdb_key_schema = 1;
  // If present, there must be at-least one element.
  optional IndexSchemaValue fdb_value_schema = 2;
}
